--- a/mod2/css/style.css
+++ b/mod2/css/style.css
@@ -2,16 +2,54 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-	margin-bottom: 15px;
+	margin-top: 30px;
+	margin-bottom: 50px;
+	font-size: 175%;
+	text-align: center;
 }
 .row {
 	width: 100%;
 }
 div {
-	border: 1px solid black;
 	float: left;
+
+}
+.col12, .col3 {
+	position: relative;
+}
+section {
+	width: 150px;
+	height: 50px;
+	border: 1px solid black;
+	position: absolute;
+	top: 0px;
+	right: 20px;
+	text-align: center;
+	font-size: 125%;
+	padding-top: 10px;
+}
+p {
+	border: 1px solid black;
+	padding-top: 60px;
+	padding-left: 15px;
+	padding-right: 15px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 30px;
+	height:
+	background-color: grey;
+}
+#ch {
+	background-color: pink;
+}
+#be {
+	background-color: maroon;
+}
+#su {
+	background-color: yellow;
 }
 
 /*******Desktop************/
